--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,7 +18,13 @@ a {
     text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+    color: $black;
+}
+
+p {
     margin: 0;
     padding: 0;
 }
@@ -30,31 +36,222 @@ ul {
 }
 
 button {
+    padding: 0;
+    font: inherit;
+    color: $black;
+    background-color: transparent;
+    border: none;
     outline: none;
-}
-
-.preview__title {
-    font-weight: 700;
-    font-size: 40px;
-}
-
-.preview__subtitle {
-    font-weight: 400;
-    font-size: 20px;
+    cursor: pointer;
 }
 
 .container {
-    max-width: 1170px;
+    max-width: 1200px;
     margin: 0 auto;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-navbar__link_active-page {
+    cursor: default !important;
+    color: $black !important;
+    pointer-events: none !important;
 }
 
 
 /* HEADER */
 
+.header {
+    &__inner {
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 50px 0;
+    }
+
+    .open-modal-button {
+        font-weight: 700;
+        font-size: 20px;
+        padding: 6px 12px;
+        transition: all 0.3s linear;
+
+        &:hover {
+            color: $grey;
+        }
+    }
+}
+
 /* MODAL */
+
+.modal {
+    display: none;
+}
 
 /* PREVIEW */
 
+.preview {
+    margin-bottom: 250px;
+
+    &__content {
+        text-align: center;
+        padding-top: 10%;
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: 40px;
+        margin-bottom: 10px;
+    }
+
+    &__subtitle {
+        font-weight: 400;
+        font-size: 20px;
+    }
+}
+
+/* HOME PROJECTS */
+
+.projects {
+    margin-bottom: 150px;
+
+    .projects__inner {
+        display: flex;
+        flex-direction: column;
+        gap: 120px;
+
+        .project {
+            position: relative;
+            &__name {
+                font-size: 32px;
+                position: absolute;
+                top: -5%;
+                z-index: 1;
+            }
+
+            &__link {
+                width: 100%;
+                height: 100%;
+
+                img {
+                    width: 790px;
+                    height: 440px;
+                    transition: all 0.3s linear;
+
+                    &:hover {
+                        transform: scale(0.9);
+                    }
+                }
+            }
+        }
+
+        .project:first-child {
+            align-self: flex-end;
+            .project__name {
+                right: 0;
+                margin-right: 10px;
+            }
+        }
+
+        .project:nth-child(2) {
+            align-self: flex-start;
+            .project__name {
+                left: 0;
+                margin-left: 10px;
+            }
+        }
+
+        .work-button {
+            align-self: center;
+            border: 1px solid $black;
+            color: $black;
+            padding: 13px 18px;
+            transition: all 0.3s linear;
+            font-weight: 400;
+            font-size: 15px;
+
+            &:hover {
+                color: #fff;
+                background-color: $black;
+            }
+        }
+    }
+}
+
 /* BIG BUTTONS */
 
+.big-buttons {
+    margin-bottom: 120px;
+
+    &__inner {
+        display: flex;
+
+        .big-button {
+            text-align: center;
+            display: block;
+            flex: 1 1 50%;
+            background-color: $black;
+            color: #fff;
+            padding: 150px;
+            letter-spacing: 8px;
+            font-weight: 700;
+            font-size: 26px;
+            transition: all 0.3s linear;
+            cursor: pointer;
+
+            &:hover {
+                background-color: $button-hover-bg;
+                color: $black;
+            }
+        }
+    }
+}
+
 /* FOOTER */
+
+.footer {
+    margin-bottom: 5%;
+    
+    &__inner {
+        display: flex;
+        font-size: 15px;
+        flex-wrap: wrap;
+
+        .mail {
+            padding-left: 30px;
+            flex: 1 1 33.333%;
+
+            &__title {
+                font-weight: 400;
+                color: $black;
+                margin-bottom: 10px;
+            }
+        }
+
+        a {
+            color: $dark-grey;
+            font-weight: 300;
+            transition: all .3s linear;
+
+            &:hover {
+                color: $black;
+            }
+        }
+
+        ul {
+            gap: 20px;
+        }
+
+        .social-links {
+            flex: 1 1 33.333%;
+        }
+
+        .footer-navbar {
+            flex: 1 1 33.333%;
+        }
+    }
+}
