--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,7 @@ html, body {
 
 a {
     text-decoration: none;
+    transition: all 0.3s linear;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -43,6 +44,7 @@ button {
     border: none;
     outline: none;
     cursor: pointer;
+    transition: all 0.3s linear;
 }
 
 .container {
@@ -61,6 +63,12 @@ button {
     pointer-events: none !important;
 }
 
+.modal__link_active-page {
+    cursor: default !important;
+    opacity: .5;
+    pointer-events: none !important;
+}
+
 
 /* HEADER */
 
@@ -74,11 +82,16 @@ button {
         padding: 50px 0;
     }
 
+    &__title {
+        color: $black;
+        font-weight: 700;
+        font-size: 24px;
+    }
+
     .open-modal-button {
         font-weight: 700;
         font-size: 20px;
         padding: 6px 12px;
-        transition: all 0.3s linear;
 
         &:hover {
             color: $grey;
@@ -89,7 +102,55 @@ button {
 /* MODAL */
 
 .modal {
-    display: none;
+    position: fixed;
+    left: 0;
+    top: -100%;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $black;
+    transition: all 0.3s ease-in-out;
+
+    &__inner {
+        text-align: center;
+        color: #fff;
+    }
+
+    &__title {
+        opacity: .2;
+        font-size: 50px;
+        color: #fff;
+        margin-bottom: 30px;
+        letter-spacing: 3px;
+    }
+
+    &__list {
+        gap: 25px;
+        margin-bottom: 15px;
+    }
+
+    &__link {
+        font-size: 20px;
+        color: #fff;
+
+        &:hover {
+            opacity: .2;
+        }
+    }
+
+    .close-modal-button {
+        padding: 2px;
+        font-size: 24px;
+        cursor: pointer;
+        color: #fff;
+    }
+}
+
+.modal_open {
+    top: 0;
 }
 
 /* PREVIEW */
@@ -97,7 +158,7 @@ button {
 .preview {
     margin-bottom: 250px;
 
-    &__content {
+    &__inner {
         text-align: center;
         padding-top: 10%;
     }
@@ -126,6 +187,7 @@ button {
 
         .project {
             position: relative;
+
             &__name {
                 font-size: 32px;
                 position: absolute;
@@ -151,6 +213,7 @@ button {
 
         .project:first-child {
             align-self: flex-end;
+
             .project__name {
                 right: 0;
                 margin-right: 10px;
@@ -159,18 +222,18 @@ button {
 
         .project:nth-child(2) {
             align-self: flex-start;
+
             .project__name {
                 left: 0;
                 margin-left: 10px;
             }
         }
 
-        .work-button {
+        .works-button {
             align-self: center;
             border: 1px solid $black;
             color: $black;
             padding: 13px 18px;
-            transition: all 0.3s linear;
             font-weight: 400;
             font-size: 15px;
 
@@ -200,7 +263,6 @@ button {
             letter-spacing: 8px;
             font-weight: 700;
             font-size: 26px;
-            transition: all 0.3s linear;
             cursor: pointer;
 
             &:hover {
@@ -215,7 +277,7 @@ button {
 
 .footer {
     margin-bottom: 5%;
-    
+
     &__inner {
         display: flex;
         font-size: 15px;
@@ -235,7 +297,6 @@ button {
         a {
             color: $dark-grey;
             font-weight: 300;
-            transition: all .3s linear;
 
             &:hover {
                 color: $black;
