--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,8 @@
 @import url(./works.css);
 @import url(./logos.css);
 @import url(./blog.css);
+@import url(./slideshow.css);
+@import url(./about.css);
 
 *,
 *::after,
@@ -9,11 +11,12 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     width: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: #fff;
 }
 
@@ -22,7 +25,12 @@ a {
     transition: all 0.3s linear;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
     padding: 0;
     color: $black;
@@ -68,7 +76,7 @@ button {
 
 .modal__link_active-page {
     cursor: default !important;
-    opacity: .5;
+    opacity: 0.5;
     pointer-events: none !important;
 }
 
@@ -86,7 +94,6 @@ button {
         background-color: $black;
     }
 }
-
 
 /* HEADER */
 
@@ -138,7 +145,7 @@ button {
     }
 
     &__title {
-        opacity: .2;
+        opacity: 0.2;
         font-size: 50px;
         color: #fff;
         margin-bottom: 30px;
@@ -155,7 +162,7 @@ button {
         color: #fff;
 
         &:hover {
-            opacity: .2;
+            opacity: 0.2;
         }
     }
 
@@ -228,9 +235,9 @@ button {
                 }
             }
 
-            &:first-child{
+            &:first-child {
                 align-self: flex-end;
-    
+
                 .project-preview__name {
                     right: 0;
                     margin-right: 10px;
@@ -239,7 +246,7 @@ button {
 
             &:nth-child(2) {
                 align-self: flex-start;
-    
+
                 .project-preview__name {
                     left: 0;
                     margin-left: 10px;
@@ -310,7 +317,9 @@ button {
             gap: 20px;
         }
 
-        .social-links, .footer-navbar, .mail {
+        .social-links,
+        .footer-navbar,
+        .mail {
             flex: 1 1 33.333%;
         }
     }
