feat: add singleproject page design
also delete unused images and fix path to images in html

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,7 @@
 @import url(./blog.css);
 @import url(./slideshow.css);
 @import url(./about.css);
+@import url(./singleproject.css);
 
 *,
 *::after,
