--- a/src/css/about.css
+++ b/src/css/about.css
@@ -32,6 +32,31 @@
     }
 }
 
+@media screen and (max-width:900px){
+    .about__inner {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 30px;
+    }
+
+    .about__inner .about__text {
+        margin-left: 0;
+    }
+
+    .about__inner .about__image img{
+        width: 100%;
+        object-fit: contain;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width:500px){
+    .about__inner .about__text {
+        padding: 40px 20px;
+    }
+}
+
 .description {
     margin-bottom: 120px;
 
@@ -69,6 +94,23 @@
     }
 }
 
+@media screen and (max-width:900px){
+    .description__items {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .description__text {
+        padding: 0 20px;
+    }
+
+    .description__image img {
+        object-fit: contain;
+        height: 100%;
+    }
+}
+
 .summary {
     margin-bottom: 120px;
 
@@ -100,6 +142,19 @@
 
     a:hover {
         color: $black;
+    }
+}
+
+@media screen and (max-width:900px){
+    .summary__inner {
+        gap: 80px;
+    }
+}
+
+@media screen and (max-width:750px){
+    .summary__inner {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
