--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,10 @@ body {
     background-color: #fff;
 }
 
+body.modal_open {
+    position: fixed;
+}
+
 a {
     text-decoration: none;
     transition: all 0.3s linear;
@@ -62,6 +66,18 @@ button {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 1200px) {
+    .container {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .container {
+        width: 100%;
+    }
 }
 
 .list {
@@ -179,6 +195,12 @@ button {
     top: 0;
 }
 
+@media screen and (max-width: 768px) {
+    .modal__title {
+        font-size: 40px;
+    }
+}
+
 /* PREVIEW */
 
 .preview {
@@ -198,6 +220,12 @@ button {
     &__subtitle {
         font-weight: 400;
         font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .preview {
+        margin-bottom: 180px;
     }
 }
 
@@ -257,10 +285,49 @@ button {
     }
 }
 
+@media screen and (max-width: 900px) {
+    .projects-preview__inner .project-preview__link .project-preview__image {
+        width: 100%;
+        object-fit: contain;
+        height: 100%;
+    }
+
+    .projects-preview__inner .project-preview:first-child, .projects-preview__inner .project-preview:nth-child(2){
+        align-self: center;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .projects-preview__inner .project-preview:first-child {
+        .project-preview__name {
+            margin-right: 0;
+            right: 50%;
+            transform: translateX(50%);
+        }
+    }
+
+    .projects-preview__inner .project-preview:nth-child(2) {
+        .project-preview__name {
+            margin-left: 0;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .projects-preview__inner .project-preview:first-child, .projects-preview__inner .project-preview:nth-child(2) {
+        .project-preview__name {
+            top: -15%;
+        }
+    }
+}
+
 /* BIG BUTTONS */
 
 .big-buttons {
     margin-bottom: 120px;
+    width: 100%;
 
     &__inner {
         display: flex;
@@ -282,6 +349,13 @@ button {
                 color: $black;
             }
         }
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .big-buttons__inner .big-button {
+        padding: 30px 0;
+        font-size: 20px;
     }
 }
 
@@ -323,5 +397,18 @@ button {
         .mail {
             flex: 1 1 33.333%;
         }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .footer__inner .mail {
+        flex: 1 1 100%;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .footer__inner .social-links,
+    .footer__inner .footer-navbar {
+        text-align: center;
+        flex: 1 1 50%;
     }
 }
