--- a/src/css/singleproject.css
+++ b/src/css/singleproject.css
@@ -36,6 +36,21 @@
     }
 }
 
+@media screen and (max-width: 700px) {
+    .project-description__inner  .project-description__items {
+       flex-direction: column;
+       align-items: center;
+       text-align: center;
+       gap: 50px;
+       margin-bottom: 50px;
+    }  
+
+    .project-description__inner  .project-description__item .project-description__item__text {
+        padding: 0 20px;
+    }
+
+}
+
 .gallery {
     margin-bottom: 140px;
 
@@ -62,6 +77,18 @@
 
     .works-button {
         margin-top: 100px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .gallery__inner .gallery__items {
+        flex-direction: column;
+    }
+
+    .gallery__inner .gallery__item img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 }
 
