--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -15,7 +15,7 @@
                     transition: all 0.3s linear;
 
                     &:hover {
-                        transform: scale(.9);
+                        transform: scale(0.9);
                     }
                 }
             }
@@ -39,9 +39,9 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .posts__inner .post img{
+    .posts__inner .post img {
         width: 500px;
-    }  
+    }
 }
 
 @media screen and (max-width: 1140px) {
@@ -49,27 +49,27 @@
         flex-direction: column;
         align-items: center;
     }
-    .posts__inner .post img{
+    .posts__inner .post img {
         width: 600px;
-    }  
+    }
 
-    .posts__inner .post .post__info{
+    .posts__inner .post .post__info {
         padding-left: 0;
-    }  
+    }
 
     .posts__inner .post {
         text-align: center;
-    }  
+    }
 }
 
 @media screen and (max-width: 620px) {
-    .posts__inner .post img{
+    .posts__inner .post img {
         object-fit: contain;
         width: 100%;
         height: 100%;
-    }  
+    }
 
     .posts__inner .post {
         margin-bottom: 60px;
-    }  
+    }
 }
