--- a/src/css/singleproject.css
+++ b/src/css/singleproject.css
@@ -17,7 +17,7 @@
             font-size: 36px;
             margin-bottom: 30px;
         }
-    
+
         &__text {
             color: $grey;
             letter-spacing: 1px;
@@ -29,6 +29,8 @@
     }
 
     &__image {
+        flex: 1 1 33.333%;
+
         img {
             width: 385px;
             height: 270px;
@@ -36,19 +38,46 @@
     }
 }
 
-@media screen and (max-width: 700px) {
-    .project-description__inner  .project-description__items {
-       flex-direction: column;
-       align-items: center;
-       text-align: center;
-       gap: 50px;
-       margin-bottom: 50px;
-    }  
+@media screen and (max-width: 1200px) {
+    .project-description__inner .project-description__items:nth-child(2) {
+        flex-direction: column;
+        gap: 20px;
+        .project-description__image:first-child {
+            align-self: flex-start;
+        }
 
-    .project-description__inner  .project-description__item .project-description__item__text {
+        .project-description__image:nth-child(2) {
+            align-self: center;
+        }
+
+        .project-description__image:last-child {
+            align-self: flex-end;
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .project-description__inner .project-description__items {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 50px;
+        margin-bottom: 50px;
+    }
+
+    .project-description__inner
+        .project-description__item
+        .project-description__item__text {
         padding: 0 20px;
     }
 
+    .project-description__inner .project-description__items:nth-child(2) {
+        .project-description__image:first-child,
+        .project-description__image:nth-child(2),
+        .project-description__image:last-child {
+            align-self: center;
+        }
+    }
 }
 
 .gallery {
@@ -80,6 +109,14 @@
     }
 }
 
+@media screen and (max-width: 1200px) {
+    .gallery__inner .gallery__item img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+}
+
 @media screen and (max-width: 700px) {
     .gallery__inner .gallery__items {
         flex-direction: column;
@@ -91,4 +128,3 @@
         object-fit: contain;
     }
 }
-
