--- a/src/css/works.css
+++ b/src/css/works.css
@@ -1,6 +1,6 @@
 .projects {
     margin-bottom: 140px;
-    
+
     &__inner {
         display: flex;
         flex-wrap: wrap;
@@ -21,14 +21,14 @@
                     transition: all 0.3s linear;
 
                     &:hover {
-                        transform: scale(.9);
+                        transform: scale(0.9);
                     }
                 }
             }
 
             &__info {
                 padding-left: 15px;
-            }  
+            }
 
             &__title {
                 font-size: 26px;
@@ -52,9 +52,9 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .projects__inner .project img{
+    .projects__inner .project img {
         width: 500px;
-    }  
+    }
 }
 
 @media screen and (max-width: 1140px) {
@@ -62,27 +62,27 @@
         flex-direction: column;
         align-items: center;
     }
-    .projects__inner .project img{
+    .projects__inner .project img {
         width: 600px;
-    }  
+    }
 
-    .projects__inner .project .project__info{
+    .projects__inner .project .project__info {
         padding-left: 0;
-    }  
+    }
 
-    .projects__inner .project{
+    .projects__inner .project {
         text-align: center;
-    }  
+    }
 }
 
 @media screen and (max-width: 620px) {
-    .projects__inner .project img{
+    .projects__inner .project img {
         object-fit: contain;
         width: 100%;
         height: 100%;
-    }  
+    }
 
     .projects__inner .project {
         margin-bottom: 60px;
-    }  
+    }
 }
